@@ -10,10 +10,25 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
+        <fork>true</fork>
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
       </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18</version>
+				<configuration>
+       			<parallel>classes</parallel>
+       			<forkMode>perthread</forkMode>
+       			<threadCount>3</threadCount>
+        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+        <includes>
+        <include>**/*Steps.java</include>
+        </includes>
+    </configuration>
+			</plugin>
     </plugins>
   </build>
   <dependencies>
@@ -37,6 +52,43 @@
    <artifactId>junit</artifactId> 
    <version>4.11</version> 
 </dependency>
-</dependencies>
+<dependency>
+    <groupId>com.github.temyers</groupId>
+    <artifactId>cucumber-jvm-parallel-plugin</artifactId>
+    <version>5.0.0</version>
+</dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>21.0</version>
+      </dependency>
+      
+<dependency>
+	<groupId>com.vimalselvam</groupId>
+	<artifactId>cucumber-extentsreport</artifactId>
+	<version>3.0.2</version>
+</dependency>
+<dependency>
+ <groupId>com.vimalselvam</groupId>
+ <artifactId>cucumber-extentsreport</artifactId>
+ <version>3.0.2</version>
+</dependency>
+
+<dependency>
+	<groupId>com.aventstack</groupId>
+	<artifactId>extentreports</artifactId>
+	<version>3.1.2</version>
+</dependency>
+<dependency>
+ <groupId>com.aventstack</groupId>
+ <artifactId>extentreports</artifactId>
+ <version>3.1.2</version>
+</dependency>
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency> 
+   </dependencies>
   
 </project>
